# simple-raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: Camera.cpp.D24406B6FE1BC994.idx  Camera.hpp.7F01F91E6C440580.idx  DielectricMaterial.cpp.34CEA41B03E67027.idx  DielectricMaterial.hpp.39C13E3952033296.idx  HitRecord.cpp.A9017305DE745FCD.idx  HitRecord.hpp.F48D65229D5D1AC6.idx  Hittable.hpp.150ED39C11CFC9D4.idx  HittableList.cpp.E7A5A53197949EC1.idx  HittableList.hpp.BA696CBF04283A63.idx  LambertianMaterial.cpp.8A8F21D5B27D88D6.idx  LambertianMaterial.hpp.40D25DD58C70D72B.idx  Material.hpp.AEEEF5FAC70A214A.idx  MetalMaterial.cpp.3571448BA541416C.idx  MetalMaterial.hpp.BC4A07F1072F6B85.idx  RenderThread.cpp.137C7B233B538AA7.idx  RenderThread.hpp.0A7792D81B28EB70.idx  RenderedChunk.hpp.414B567E77C3774E.idx  Sphere.cpp.F8BE3CCB5F64529A.idx  Sphere.hpp.F2DBC11AA2E191A6.idx  colour.cpp.0C0FC7E4D05C673F.idx  colour.hpp.FB9A6741F3A657EA.idx  constants.hpp.3A28DF87C5030838.idx  main.cpp.60F6FE58CEDD83AC.idx  ray.cpp.AC0C38268ED1A08C.idx  ray.hpp.0E6DFE76796742DC.idx  raytracing.cpp.6F01C52674BC3B51.idx  raytracing.hpp.1218D63ABBD2E10C.idx  stb_image_write.h.3720103D97AF1EEE.idx  utils.cpp.2A06AE926F2A1CA7.idx  utils.hpp.6EA390B5030D7D0A.idx  vec3.cpp.C6BE8DBE5EB77EE6.idx  vec3.hpp.D38028EEA945A83E.idx
src/: Camera.cpp  Camera.hpp  DielectricMaterial.cpp  DielectricMaterial.hpp  HitRecord.cpp  HitRecord.hpp  Hittable.hpp  HittableList.cpp  HittableList.hpp  LambertianMaterial.cpp  LambertianMaterial.hpp  Material.hpp  MetalMaterial.cpp  MetalMaterial.hpp  RenderThread.cpp  RenderThread.hpp  RenderedChunk.hpp  Sphere.cpp  Sphere.hpp  colour.cpp  colour.hpp  constants.hpp  main.cpp  ppm_generator.cpp  ray.cpp  ray.hpp  raytracing.cpp  raytracing.hpp  utils.cpp  utils.hpp  vec3.cpp  vec3.hpp
